--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/preact": "^4.1.3",
     "@astrojs/rss": "^4.0.13",
-    "astro": "^5.15.8"
+    "astro": "^5.15.8",
+    "preact": "^10.27.2"
   }
 }
