--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.1.17",
     "astro": "^5.15.9",
+    "astro-icon": "^1.1.5",
     "tailwindcss": "^4.1.17"
   }
 }
